[gd_scene load_steps=12 format=3 uid="uid://cxa0idg80exwg"]

[ext_resource type="Script" uid="uid://bjvs2oatrvn4j" path="res://Scripts/Items/Fire_Trap.gd" id="1_0o5h5"]
[ext_resource type="PackedScene" uid="uid://bh4gb3uxc0q1j" path="res://Prefabs/VFX/fire_particles.tscn" id="2_hw0eb"]
[ext_resource type="Texture2D" uid="uid://ddbemolikmb3k" path="res://Sources/Textures/SummoningCircle.png" id="3_163qv"]

[sub_resource type="Curve" id="Curve_152kg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.192568, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_r4e17"]
curve = SubResource("Curve_152kg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y57op"]
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 1.0
emission_ring_radius = 2.15
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_r4e17")
turbulence_noise_strength = 6.99

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mlv25"]
albedo_color = Color(0.893162, 0, 0.175825, 1)
emission_enabled = true
emission = Color(0.911374, 0, 0.0663948, 1)
emission_energy_multiplier = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_a82wo"]
material = SubResource("StandardMaterial3D_mlv25")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gdvew"]
transparency = 4
albedo_color = Color(0.813856, 0, 0.208764, 1)
albedo_texture = ExtResource("3_163qv")
emission_enabled = true
emission = Color(0.996455, 0, 0.391645, 1)
emission_energy_multiplier = 5.0

[sub_resource type="QuadMesh" id="QuadMesh_kjtvk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_r4e17"]
size = Vector3(4, 4, 4)

[node name="Fire_Trap" type="Node3D"]
transform = Transform3D(1.2125, 0, 0, 0, 1.2125, 0, 0, 0, 1.2125, 0, 0, 0)
script = ExtResource("1_0o5h5")

[node name="Fire_Particles" parent="." instance=ExtResource("2_hw0eb")]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_y57op")
draw_pass_1 = SubResource("BoxMesh_a82wo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(4.47761, 0, 0, 0, -1.95723e-07, 4.47761, 0, -4.47761, -1.95723e-07, 0, 0.016669, -7.28627e-10)
material_override = SubResource("StandardMaterial3D_gdvew")
mesh = SubResource("QuadMesh_kjtvk")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 2.03827, 0)
shape = SubResource("BoxShape3D_r4e17")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
